@@ -500,6 +500,7 @@ public:
 	bool AddProcToWeapon(uint16 spell_id, bool bPerma = false, uint16 iChance = 3, uint16 base_spell_id = SPELL_UNKNOWN);
 	bool RemoveProcFromWeapon(uint16 spell_id, bool bAll = false);
 	bool HasProcs() const;
+	bool IsCombatProc(uint16 spell_id);
 
 	//Logging
 	bool IsLoggingEnabled() const { return(logging_enabled); }
